Support window system proxy resolver

So far we supported v8 proxy resolver and 'older'
WinHttp based proxy resolver, which involves pulling
(directly) WinHttpGetIEProxyConfigForCurrentUser and does
not support (according to Chromium authors) Name Resolution
Proxy Table.

With 102 we are able to use windows system proxy resolver in
form of 'modern' service using also WinHTTP APIs.
This is going to replace later default old implementation.

Add same switches as Chromium supports:

* --winhttp-system-proxy-resolver
to use older WinHttp resolver instead of v8 resolver
(note v8 resolver does not work in single-process)

* --use-system-proxy-resolver
to use 'new' proxy system resolver service

Note as new service requires minimum windows 10 1604 or later build,
application needs correct manifest, otherwise it will
silently fallback to older 'direct' WinHttp resolver.

Note to test the 'new' proxy resolver, following pac file can
be served to windows proxy configuration to prove that pac
script is actually resolved:

function FindProxyForURL(url,host) {
     if (dnsDomainIs(host, "qt.io"))
       return "DIRECT"
     return "PROXY localhost:6666"
}

Task-number: QTBUG-104436
Change-Id: Ib2625c5ab5e618c8fdebd1bdc1cda928639a5dd5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>